themoviedb api integration to fetch list of movies

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://admin:123123123@cluster0.jcdrf8d.mongodb.net/moviedb
 THEMOVIEDB_API_KEY=1381616cec72e227eedb35898bc2134e
+THEMOVIEDB_API_URL=https://api.themoviedb.org/3/
